# brain-organizer

./: .dockerignore  .env_local  .env_server  .env_web  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  dependabot.yml  import.csv  init.sql  model.adoc  whatsNext.db
.github/workflows/: build.yml  release.yml
brain_manager_web/: GET one reference.bru  GET reference.bru  bruno.json  create_one.bru  test.bru
brain_manager_web/environments/: LOCAL.bru  PROD.bru
src/: application_error.rs  client.rs  command.rs  connecteur.rs  database.rs  error.rs  init.sql  main.rs
src/application/: app.rs  command.rs  contenu.rs  database.rs  error.rs  evenement.rs  file.rs  mod.rs  reference.rs
src/application/dot_parser/: attribute.rs  dot_graph.rs  dot_parser.rs  edge.rs  graph_type.rs  mod.rs  node.rs
src/application/file/: export.rs  import.rs  lib.rs  mod.rs
src/application/finance/: depense.rs  service.rs
src/application/graph/: lib.rs  mod.rs  my_graph.rs  structs.rs
src/application/gui/: app.rs  composant.rs  gui.rs  mod.rs  reference_gui.rs  structs.rs
src/application/reference/: reference.rs  service.rs  structs.rs
src/application/reflexion/: mod.rs  reflexion.rs  service.rs  structs.rs
src/application/web/: mod.rs  (+2 more)
src/file/: export.rs  import.rs  lib.rs  mod.rs
src/finance/: depense.rs  mod.rs  service.rs
src/graph/: mod.rs  my_graph.rs
src/gui/: app.rs  composant.rs  mod.rs  structs.rs
src/migration/: V1__initial.sql  V2__create_reflexion.sql  V3__adding_creation_date_reference.sql  V4__adding_finances.sql  V5__adding_to_read_on_references.sql  V6__create_graphs_tables.sql  V7__adding_repetition_finance.sql
src/notes/: mod.rs  note.rs  service.rs
src/reference/: client_db.rs  client_web.rs  mod.rs  service.rs
src/reflexion/: reflexion.rs  service.rs
src/server/: depenses_controller.rs  graphs_controller.rs  mod.rs  note_controller.rs  references_controller.rs  server.rs  tags_controller.rs
src/tag/: mod.rs  service.rs  tag.rs
src/web/: references_controller.rs  server.rs
(+76 files in other folders)
