[package]
name = "brain_manager"
version = "0.1.0"
edition = "2021"


[dependencies]
rusqlite= {version = "0.31.0", features = ["bundled"]}
egui= {version = "0.29", features = ["persistence"]}
eframe = { version = "0.29", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
refinery = {version = "0.8.13", features = ["rusqlite"]}
uuid = {version = "1.11.0", features = ["v4", "serde"]}
serde = { version = "1", features = ["derive"] }
strum = "0.26"
strum_macros = "0.26"
env_logger = "0.11"
dotenv = "0.15"
egui_graphs = { version = "0.22", features = ["egui_persistence", "serde"]}
petgraph = {version = "0.6", features = ["serde-1"]}
thiserror ={ version = "2.0"}
serde_json = { version = "1.0"}
chrono = { version = "0.4", features = ["serde"]}
rand = {version = "0.8"}
ilmen-http = { version = "0.0.9"}
ilmen-dot-parser = { version="0.0.1" }
clippers = "0.1.2"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }